2007-10-05  Marcus Brinkmann  <marcus@g10code.de>

	* client.h (class client_t): Two new member functions
	create_checksums and verify_checksums.
	* client.cc (client_t::create_checksums, client_t::verify_checksums): New functions.
	(client_t::encrypt_sign, client_t::encrypt): Fix spelling.
	* gpgex.cc (ID_CMD_CREATE_CHECKSUMS, ID_CMD_VERIFY_CHECKSUMS,
	ID_CMD_STR_CREATE_CHECKSUMS, ID_CMD_STR_VERIFY_CHECKSUMS): New macros.
	(gpgex_t::QueryContextMenu): Add create and verify checksums menu entries.
	(gpgex_t::GetCommandString): Support these here as well.  Translate all strings.

2007-10-03  Marcus Brinkmann  <marcus@g10code.de>

	* client.cc (percent_escape, escape): New functions.
	(client_t::call_assuan): Fix INPUT command.

2007-09-21  Werner Koch  <wk@g10code.com>

	* registry.c (default_homedir): Make registry works.  Reported by
	Marc Mutz.

2007-09-16  Marcus Brinkmann  <marcus@g10code.de>

	* gpgex.cc (gpgex_t::QueryContextMenu): Implement popup menu
	correctly, such that the explorer can clean up correctly (in the
	file dialog).
	(gpgex_t::GetCommandString): Implement help texts.
	(start_help): New function.
	(gpgex_t::InvokeCommand): Call start_help.
	* Makefile.am (gpgex_LDADD): Add -loleaut32.

2007-09-11  Marcus Brinkmann  <marcus@g10code.de>

	* client.cc (client_t::call_assuan): Send --nohup as argument to
	command.

	* client.h (class client_t): New members decrypt, verify, encrypt,
	and sign.
	* client.cc: Add implementations for these.
	* gpgex.h: Move all ID_CMD_* macros to ...
	* gpgex.cc: ... here.  Add new macros for new commands.
	(gpgex_t::InvokeCommand, gpgex_t::QueryContextMenu): Implement new
	commands.

	* Makefile.am (libgpg-error.a, libassuan.a): Use -f flag with ln.
	* registry.h (default_dir): New prototype.
	* registry.c (default_dir, standard_homedir): New functions.
	* client.cc (default_socket_name): Use default home dir instead
	install directory.

2007-09-05  Marcus Brinkmann  <marcus@g10code.de>
