@@ -1,5 +1,8 @@
 2007-10-05  Marcus Brinkmann  <marcus@g10code.de>
 
+	* client.cc (percent_escape): Also escape ':' again.
+	* gpgex.cc (start_help): Do not sleep.
+
 	* client.h (class client_t): Two new member functions
 	create_checksums and verify_checksums.
 	* client.cc (client_t::create_checksums, client_t::verify_checksums): New functions.
